--- a/localisation/cot_nation_ideas_l_english.yml
+++ b/localisation/cot_nation_ideas_l_english.yml
@@ -7080,3 +7080,129 @@ B20_ideas_1:0 "Iron Scepter Ideas 1"
  A57_idea_6_3_desc:0 "Toarnen  6 desc"
  A57_idea_7_3:0 "Milcori Multi-barrels"
  A57_idea_7_3_desc:0 "Toarnen  7 desc"
+
+ B81_ideas_1:0 "Hortosare Ideas 1"
+ B81_ideas_1_start:0 "Hortosare Traditions 1"
+ B81_ideas_1_bonus:0 "Hortosare Ambition 1"
+ B81_idea_1_1:0 "Humble Hortosari"
+ B81_idea_1_1_desc:0 "Hortosare 1 desc"
+ B81_idea_2_1:0 "Kheteratan Past"
+ B81_idea_2_1_desc:0 "Hortosare 2 desc"
+ B81_idea_3_1:0 "Rock Lion"
+ B81_idea_3_1_desc:0 "Hortosare 3 desc"
+ B81_idea_4_1:0 "Cannorian Borders"
+ B81_idea_4_1_desc:0 "Hortosare 4 desc"
+ B81_idea_5_1:0 "Cannorian Sun Elves"
+ B81_idea_5_1_desc:0 "Hortosare 5 desc"
+ B81_idea_6_1:0 "Businori Future"
+ B81_idea_6_1_desc:0 "Hortosare 6 desc"
+ B81_idea_7_1:0 "Khenaki Hillmen"
+ B81_idea_7_1_desc:0 "Hortosare 7 desc"
+
+ B81_ideas_2:0 "Hortosare Ideas 2"
+ B81_ideas_2_start:0 "Hortosare Traditions 2"
+ B81_ideas_2_bonus:0 "Hortosare Ambition 2"
+ B81_idea_1_2:0 "Humble Hortosari"
+ B81_idea_1_2_desc:0 "Hortosare 1 desc"
+ B81_idea_2_2:0 "Kheteratan Past"
+ B81_idea_2_2_desc:0 "Hortosare 2 desc"
+ B81_idea_3_2:0 "Rock Lion"
+ B81_idea_3_2_desc:0 "Hortosare 3 desc"
+ B81_idea_4_2:0 "Cannorian Borders"
+ B81_idea_4_2_desc:0 "Hortosare 4 desc"
+ B81_idea_5_2:0 "Cannorian Sun Elves"
+ B81_idea_5_2_desc:0 "Hortosare 5 desc"
+ B81_idea_6_2:0 "Businori Future"
+ B81_idea_6_2_desc:0 "Hortosare 6 desc"
+ B81_idea_7_2:0 "Khenaki Hillmen"
+ B81_idea_7_2_desc:0 "Hortosare 7 desc"
+
+ B81_ideas_3:0 "Hortosare Ideas 3"
+ B81_ideas_3_start:0 "Hortosare Traditions 3"
+ B81_ideas_3_bonus:0 "Hortosare Ambition 3"
+ B81_idea_1_3:0 "Humble Hortosari"
+ B81_idea_1_3_desc:0 "Hortosare 1 desc"
+ B81_idea_2_3:0 "Kheteratan Past"
+ B81_idea_2_3_desc:0 "Hortosare 2 desc"
+ B81_idea_3_3:0 "Rock Lion"
+ B81_idea_3_3_desc:0 "Hortosare 3 desc"
+ B81_idea_4_3:0 "Cannorian Borders"
+ B81_idea_4_3_desc:0 "Hortosare 4 desc"
+ B81_idea_5_3:0 "Cannorian Sun Elves"
+ B81_idea_5_3_desc:0 "Hortosare 5 desc"
+ B81_idea_6_3:0 "Businori Future"
+ B81_idea_6_3_desc:0 "Hortosare 6 desc"
+ B81_idea_7_3:0 "Khenaki Hillmen"
+ B81_idea_7_3_desc:0 "Hortosare 7 desc"
+
+ A29_ideas_2:0 "Busilar Ideas 2"
+ A29_ideas_2_start:0 "Busilar Traditions 2"
+ A29_ideas_2_bonus:0 "Busilar Ambition 2"
+ A29_idea_1_2:0 "Royal Busilari"
+ A29_idea_1_2_desc:0 "Busilar 1 desc"
+ A29_idea_2_2:0 "Kheteratan Past"
+ A29_idea_2_2_desc:0 "Busilar 2 desc"
+ A29_idea_3_2:0 "Rock Lion"
+ A29_idea_3_2_desc:0 "Busilar 3 desc"
+ A29_idea_4_2:0 "Cannorian Borders"
+ A29_idea_4_2_desc:0 "Busilar 4 desc"
+ A29_idea_5_2:0 "Cannorian Sun Elves"
+ A29_idea_5_2_desc:0 "Busilar 5 desc"
+ A29_idea_6_2:0 "Businori Future"
+ A29_idea_6_2_desc:0 "Busilar 6 desc"
+ A29_idea_7_2:0 "Khenaki Hillmen"
+ A29_idea_7_2_desc:0 "Busilar 7 desc"
+
+ A29_ideas_3:0 "Busilar Ideas 3"
+ A29_ideas_3_start:0 "Busilar Traditions 3"
+ A29_ideas_3_bonus:0 "Busilar Ambition 3"
+ A29_idea_1_3:0 "Royal Busilari"
+ A29_idea_1_3_desc:0 "Busilar 1 desc"
+ A29_idea_2_3:0 "Kheteratan Past"
+ A29_idea_2_3_desc:0 "Busilar 2 desc"
+ A29_idea_3_3:0 "Rock Lion"
+ A29_idea_3_3_desc:0 "Busilar 3 desc"
+ A29_idea_4_3:0 "Cannorian Borders"
+ A29_idea_4_3_desc:0 "Busilar 4 desc"
+ A29_idea_5_3:0 "Cannorian Sun Elves"
+ A29_idea_5_3_desc:0 "Busilar 5 desc"
+ A29_idea_6_3:0 "Businori Future"
+ A29_idea_6_3_desc:0 "Busilar 6 desc"
+ A29_idea_7_3:0 "Khenaki Hillmen"
+ A29_idea_7_3_desc:0 "Busilar 7 desc"
+
+ A47_ideas_2:0 "Eborthil Ideas 2"
+ A47_ideas_2_start:0 "Eborthil Traditions 2"
+ A47_ideas_2_bonus:0 "Eborthil Ambition 2"
+ A47_idea_1_2:0 "Tefori Dozen"
+ A47_idea_1_2_desc:0 "Eborthil 1 desc"
+ A47_idea_2_2:0 "Kheteratan Past"
+ A47_idea_2_2_desc:0 "Eborthil 2 desc"
+ A47_idea_3_2:0 "Order of Goldwater"
+ A47_idea_3_2_desc:0 "Eborthil 3 desc"
+ A47_idea_4_2:0 "Cannorian Borders"
+ A47_idea_4_2_desc:0 "Eborthil 4 desc"
+ A47_idea_5_2:0 "New Lands"
+ A47_idea_5_2_desc:0 "Eborthil 5 desc"
+ A47_idea_6_2:0 "Businori Future"
+ A47_idea_6_2_desc:0 "Eborthil 6 desc"
+ A47_idea_7_2:0 "Akasiki Auxillia"
+ A47_idea_7_2_desc:0 "Eborthil 7 desc"
+
+ A47_ideas_3:0 "Eborthil Ideas 3"
+ A47_ideas_3_start:0 "Eborthil Traditions 3"
+ A47_ideas_3_bonus:0 "Eborthil Ambition 3"
+ A47_idea_1_3:0 "Tefori Dozen"
+ A47_idea_1_3_desc:0 "Eborthil 1 desc"
+ A47_idea_2_3:0 "Kheteratan Past"
+ A47_idea_2_3_desc:0 "Eborthil 2 desc"
+ A47_idea_3_3:0 "Order of Goldwater"
+ A47_idea_3_3_desc:0 "Eborthil 3 desc"
+ A47_idea_4_3:0 "Cannorian Borders"
+ A47_idea_4_3_desc:0 "Eborthil 4 desc"
+ A47_idea_5_3:0 "New Lands"
+ A47_idea_5_3_desc:0 "Eborthil 5 desc"
+ A47_idea_6_3:0 "Businori Future"
+ A47_idea_6_3_desc:0 "Eborthil 6 desc"
+ A47_idea_7_3:0 "Akasiki Auxillia"
+ A47_idea_7_3_desc:0 "Eborthil 7 desc"
