Milcori ideas fix

--- a/localisation/cot_nation_ideas_l_english.yml
+++ b/localisation/cot_nation_ideas_l_english.yml
@@ -6955,131 +6955,131 @@ B20_ideas_1:0 "Iron Scepter Ideas 1"
  W30_idea_7_3:0 "Merit-based Statecraft"
  W30_idea_7_3_desc:0 "Arannor 7 desc"
 
- W31_ideas_3:0 "MIlcorissia Ideas 3"
- W31_ideas_3_start:0 "MIlcorissia  Traditions 1"
- W31_ideas_3_bonus:0 "MIlcorissia  or Ambition 1"
+ W31_ideas_3:0 "Milcorissia Ideas 3"
+ W31_ideas_3_start:0 "Milcorissia Traditions 1"
+ W31_ideas_3_bonus:0 "Milcorissia Ambition 1"
  W31_idea_1_3:0 "Shield Onto Itself"
- W31_idea_1_3_desc:0 "MIlcorissia  1 desc"
+ W31_idea_1_3_desc:0 "Milcorissia 1 desc"
  W31_idea_2_3:0 "Edge and Bulwark"
- W31_idea_2_3_desc:0 "MIlcorissia  2 desc"
+ W31_idea_2_3_desc:0 "Milcorissia 2 desc"
  W31_idea_3_3:0 "Beneficial Benevolence"
- W31_idea_3_3_desc:0 "MIlcorissia  3 desc"
+ W31_idea_3_3_desc:0 "Milcorissia 3 desc"
  W31_idea_4_3:0 "Local Markets"
- W31_idea_4_3_desc:0 "MIlcorissia  4 desc"
- W31_idea_5_3:0 " Wrath of Those Forgotten"
- W31_idea_5_3_desc:0 "MIlcorissia  5 desc"
+ W31_idea_4_3_desc:0 "Milcorissia 4 desc"
+ W31_idea_5_3:0 "Wrath of Those Forgotten"
+ W31_idea_5_3_desc:0 "Milcorissia 5 desc"
  W31_idea_6_3:0 "Steady Skirmishes"
- W31_idea_6_3_desc:0 "MIlcorissia  6 desc"
+ W31_idea_6_3_desc:0 "Milcorissia 6 desc"
  W31_idea_7_3:0 "Milcori Multi-barrels"
- W31_idea_7_3_desc:0 "MIlcorissia  7 desc"
+ W31_idea_7_3_desc:0 "Milcorissia 7 desc"
 
  A86_ideas_2:0 "Tellum Ideas 2"
- A86_ideas_2_start:0 "Tellum  Traditions 1"
- A86_ideas_2_bonus:0 "Tellum  or Ambition 1"
+ A86_ideas_2_start:0 "Tellum Traditions 1"
+ A86_ideas_2_bonus:0 "Tellum or Ambition 1"
  A86_idea_1_2:0 "Criers' Boon"
- A86_idea_1_2_desc:0 "Tellum  1 desc"
+ A86_idea_1_2_desc:0 "Tellum 1 desc"
  A86_idea_2_2:0 "Edge and Bulwark"
- A86_idea_2_2_desc:0 "Tellum  2 desc"
+ A86_idea_2_2_desc:0 "Tellum 2 desc"
  A86_idea_3_2:0 "Beneficial Benevolence"
- A86_idea_3_2_desc:0 "Tellum  3 desc"
+ A86_idea_3_2_desc:0 "Tellum 3 desc"
  A86_idea_4_2:0 "Local Markets"
- A86_idea_4_2_desc:0 "Tellum  4 desc"
- A86_idea_5_2:0 "Tell Them (Tellum = Tell them)"
- A86_idea_5_2_desc:0 "Tellum  5 desc"
+ A86_idea_4_2_desc:0 "Tellum 4 desc"
+ A86_idea_5_2:0 "Tell Them"
+ A86_idea_5_2_desc:0 "Tellum 5 desc"
  A86_idea_6_2:0 "Steady Skirmishes"
- A86_idea_6_2_desc:0 "Tellum  6 desc"
+ A86_idea_6_2_desc:0 "Tellum 6 desc"
  A86_idea_7_2:0 "Milcori Multi-barrels"
- A86_idea_7_2_desc:0 "Tellum  7 desc"
+ A86_idea_7_2_desc:0 "Tellum 7 desc"
 
  A86_ideas_3:0 "Tellum Ideas 3"
- A86_ideas_3_start:0 "Tellum  Traditions 1"
- A86_ideas_3_bonus:0 "Tellum  or Ambition 1"
+ A86_ideas_3_start:0 "Tellum Traditions 1"
+ A86_ideas_3_bonus:0 "Tellum or Ambition 1"
  A86_idea_1_3:0 "Criers' Boon"
- A86_idea_1_3_desc:0 "Tellum  1 desc"
+ A86_idea_1_3_desc:0 "Tellum 1 desc"
  A86_idea_2_3:0 "Edge and Bulwark"
- A86_idea_2_3_desc:0 "Tellum  2 desc"
+ A86_idea_2_3_desc:0 "Tellum 2 desc"
  A86_idea_3_3:0 "Beneficial Benevolence"
- A86_idea_3_3_desc:0 "Tellum  3 desc"
+ A86_idea_3_3_desc:0 "Tellum 3 desc"
  A86_idea_4_3:0 "Local Markets"
- A86_idea_4_3_desc:0 "Tellum  4 desc"
- A86_idea_5_3:0 "Tell Them (Tellum = Tell them)"
- A86_idea_5_3_desc:0 "Tellum  5 desc"
+ A86_idea_4_3_desc:0 "Tellum 4 desc"
+ A86_idea_5_3:0 "Tell Them"
+ A86_idea_5_3_desc:0 "Tellum 5 desc"
  A86_idea_6_3:0 "Steady Skirmishes"
- A86_idea_6_3_desc:0 "Tellum  6 desc"
+ A86_idea_6_3_desc:0 "Tellum 6 desc"
  A86_idea_7_3:0 "Milcori Multi-barrels"
- A86_idea_7_3_desc:0 "Tellum  7 desc"
+ A86_idea_7_3_desc:0 "Tellum 7 desc"
 
  A56_ideas_2:0 "Celliande Ideas 2"
  A56_ideas_2_start:0 "Celliande  Traditions 1"
  A56_ideas_2_bonus:0 "Celliande  or Ambition 1"
  A56_idea_1_2:0 "Milcori Heirs"
- A56_idea_1_2_desc:0 "Celliande  1 desc"
+ A56_idea_1_2_desc:0 "Celliande 1 desc"
  A56_idea_2_2:0 "Edge and Bulwark"
- A56_idea_2_2_desc:0 "Celliande  2 desc"
+ A56_idea_2_2_desc:0 "Celliande 2 desc"
  A56_idea_3_2:0 "Beneficial Benevolence"
- A56_idea_3_2_desc:0 "Celliande  3 desc"
+ A56_idea_3_2_desc:0 "Celliande 3 desc"
  A56_idea_4_2:0 "Local Markets"
- A56_idea_4_2_desc:0 "Celliande  4 desc"
+ A56_idea_4_2_desc:0 "Celliande 4 desc"
  A56_idea_5_2:0 "Undoing the Wexonard Mess"
- A56_idea_5_2_desc:0 "Celliande  5 desc"
+ A56_idea_5_2_desc:0 "Celliande 5 desc"
  A56_idea_6_2:0 "Steady Skirmishes"
- A56_idea_6_2_desc:0 "Celliande  6 desc"
+ A56_idea_6_2_desc:0 "Celliande 6 desc"
  A56_idea_7_2:0 "Milcori Multi-barrels"
- A56_idea_7_2_desc:0 "Celliande  7 desc"
+ A56_idea_7_2_desc:0 "Celliande 7 desc"
 
  A56_ideas_3:0 "Celliande Ideas 3"
- A56_ideas_3_start:0 "Celliande  Traditions 1"
- A56_ideas_3_bonus:0 "Celliande  or Ambition 1"
+ A56_ideas_3_start:0 "Celliande Traditions 1"
+ A56_ideas_3_bonus:0 "Celliande Ambition 1"
  A56_idea_1_3:0 "Milcori Heirs"
- A56_idea_1_3_desc:0 "Celliande  1 desc"
+ A56_idea_1_3_desc:0 "Celliande 1 desc"
  A56_idea_2_3:0 "Edge and Bulwark"
- A56_idea_2_3_desc:0 "Celliande  2 desc"
+ A56_idea_2_3_desc:0 "Celliande 2 desc"
  A56_idea_3_3:0 "Beneficial Benevolence"
- A56_idea_3_3_desc:0 "Celliande  3 desc"
+ A56_idea_3_3_desc:0 "Celliande 3 desc"
  A56_idea_4_3:0 "Local Markets"
- A56_idea_4_3_desc:0 "Celliande  4 desc"
+ A56_idea_4_3_desc:0 "Celliande 4 desc"
  A56_idea_5_3:0 "Undoing the Wexonard Mess"
- A56_idea_5_3_desc:0 "Celliande  5 desc"
+ A56_idea_5_3_desc:0 "Celliande 5 desc"
  A56_idea_6_3:0 "Steady Skirmishes"
- A56_idea_6_3_desc:0 "Celliande  6 desc"
+ A56_idea_6_3_desc:0 "Celliande 6 desc"
  A56_idea_7_3:0 "Milcori Multi-barrels"
- A56_idea_7_3_desc:0 "Celliande  7 desc"
+ A56_idea_7_3_desc:0 "Celliande 7 desc"
 
  A57_ideas_2:0 "Toarnen Ideas 2"
- A57_ideas_2_start:0 "Toarnen  Traditions 1"
- A57_ideas_2_bonus:0 "Toarnen  or Ambition 1"
+ A57_ideas_2_start:0 "Toarnen Traditions 1"
+ A57_ideas_2_bonus:0 "Toarnen Ambition 1"
  A57_idea_1_2:0 "Salty Thorns"
- A57_idea_1_2_desc:0 "Toarnen  1 desc"
+ A57_idea_1_2_desc:0 "Toarnen 1 desc"
  A57_idea_2_2:0 "Edge and Bulwark"
- A57_idea_2_2_desc:0 "Toarnen  2 desc"
+ A57_idea_2_2_desc:0 "Toarnen 2 desc"
  A57_idea_3_2:0 "Beneficial Benevolence"
- A57_idea_3_2_desc:0 "Toarnen  3 desc"
+ A57_idea_3_2_desc:0 "Toarnen 3 desc"
  A57_idea_4_2:0 "Local Markets"
- A57_idea_4_2_desc:0 "Toarnen  4 desc"
+ A57_idea_4_2_desc:0 "Toarnen 4 desc"
  A57_idea_5_2:0 "Toarnen Black"
- A57_idea_5_2_desc:0 "Toarnen  5 desc"
+ A57_idea_5_2_desc:0 "Toarnen 5 desc"
  A57_idea_6_2:0 "Steady Skirmishes"
- A57_idea_6_2_desc:0 "Toarnen  6 desc"
+ A57_idea_6_2_desc:0 "Toarnen 6 desc"
  A57_idea_7_2:0 "Milcori Multi-barrels"
- A57_idea_7_2_desc:0 "Toarnen  7 desc"
+ A57_idea_7_2_desc:0 "Toarnen 7 desc"
 
  A57_ideas_3:0 "Toarnen Ideas 3"
- A57_ideas_3_start:0 "Toarnen  Traditions 1"
- A57_ideas_3_bonus:0 "Toarnen  or Ambition 1"
+ A57_ideas_3_start:0 "Toarnen Traditions 1"
+ A57_ideas_3_bonus:0 "Toarnen Ambition 1"
  A57_idea_1_3:0 "Salty Thorns"
- A57_idea_1_3_desc:0 "Toarnen  1 desc"
+ A57_idea_1_3_desc:0 "Toarnen 1 desc"
  A57_idea_2_3:0 "Edge and Bulwark"
- A57_idea_2_3_desc:0 "Toarnen  2 desc"
+ A57_idea_2_3_desc:0 "Toarnen 2 desc"
  A57_idea_3_3:0 "Beneficial Benevolence"
- A57_idea_3_3_desc:0 "Toarnen  3 desc"
+ A57_idea_3_3_desc:0 "Toarnen 3 desc"
  A57_idea_4_3:0 "Local Markets"
- A57_idea_4_3_desc:0 "Toarnen  4 desc"
+ A57_idea_4_3_desc:0 "Toarnen 4 desc"
  A57_idea_5_3:0 "Toarnen Black"
- A57_idea_5_3_desc:0 "Toarnen  5 desc"
+ A57_idea_5_3_desc:0 "Toarnen 5 desc"
  A57_idea_6_3:0 "Steady Skirmishes"
- A57_idea_6_3_desc:0 "Toarnen  6 desc"
+ A57_idea_6_3_desc:0 "Toarnen 6 desc"
  A57_idea_7_3:0 "Milcori Multi-barrels"
- A57_idea_7_3_desc:0 "Toarnen  7 desc"
+ A57_idea_7_3_desc:0 "Toarnen 7 desc"
 
  B81_ideas_1:0 "Hortosare Ideas 1"
  B81_ideas_1_start:0 "Hortosare Traditions 1"
