--- a/localisation/cot_nation_ideas_l_english.yml
+++ b/localisation/cot_nation_ideas_l_english.yml
@@ -7206,3 +7206,111 @@ B20_ideas_1:0 "Iron Scepter Ideas 1"
  A47_idea_6_3_desc:0 "Eborthil 6 desc"
  A47_idea_7_3:0 "Akasiki Auxillia"
  A47_idea_7_3_desc:0 "Eborthil 7 desc"
+
+ U16_ideas_1:0 "Ourdia Ideas 1"
+ U16_ideas_1_start:0 "Ourdia Traditions 1"
+ U16_ideas_1_bonus:0 "Ourdia Ambition 1"
+ U16_idea_1_1:0 "Overmarch Hussars"
+ U16_idea_1_1_desc:0 "Ourdia 1 desc"
+ U16_idea_2_1:0 "Surrounded by Savages"
+ U16_idea_2_1_desc:0 "Ourdia 2 desc"
+ U16_idea_3_1:0 "Balgarsmiths"
+ U16_idea_3_1_desc:0 "Ourdia 3 desc"
+ U16_idea_4_1:0 "Undoing the Folly"
+ U16_idea_4_1_desc:0 "Ourdia 4 desc"
+ U16_idea_5_1:0 "Bahari Interests"
+ U16_idea_5_1_desc:0 "Ourdia 5 desc"
+ U16_idea_6_1:0 "Korbarid Renaissance"
+ U16_idea_6_1_desc:0 "Ourdia 6 desc"
+ U16_idea_7_1:0 "Fire in the Darkness"
+ U16_idea_7_1_desc:0 "Ourdia 7 desc"
+
+ U16_ideas_2:0 "Ourdia Ideas 2"
+ U16_ideas_2_start:0 "Ourdia Traditions 2"
+ U16_ideas_2_bonus:0 "Ourdia Ambition 2"
+ U16_idea_1_2:0 "Overmarch Hussars"
+ U16_idea_1_2_desc:0 "Ourdia 1 desc"
+ U16_idea_2_2:0 "Surrounded by Savages"
+ U16_idea_2_2_desc:0 "Ourdia 2 desc"
+ U16_idea_3_2:0 "Balgarsmiths"
+ U16_idea_3_2_desc:0 "Ourdia 3 desc"
+ U16_idea_4_2:0 "Undoing the Folly"
+ U16_idea_4_2_desc:0 "Ourdia 4 desc"
+ U16_idea_5_2:0 "Bahari Interests"
+ U16_idea_5_2_desc:0 "Ourdia 5 desc"
+ U16_idea_6_2:0 "Korbarid Renaissance"
+ U16_idea_6_2_desc:0 "Ourdia 6 desc"
+ U16_idea_7_2:0 "Fire in the Darkness"
+ U16_idea_7_2_desc:0 "Ourdia 7 desc"
+
+ U16_ideas_3:0 "Ourdia Ideas 3"
+ U16_ideas_3_start:0 "Ourdia Traditions 3"
+ U16_ideas_3_bonus:0 "Ourdia Ambition 3"
+ U16_idea_1_3:0 "Overmarch Hussars"
+ U16_idea_1_3_desc:0 "Ourdia 1 desc"
+ U16_idea_2_3:0 "Surrounded by Savages"
+ U16_idea_2_3_desc:0 "Ourdia 2 desc"
+ U16_idea_3_3:0 "Balgarsmiths"
+ U16_idea_3_3_desc:0 "Ourdia 3 desc"
+ U16_idea_4_3:0 "Undoing the Folly"
+ U16_idea_4_3_desc:0 "Ourdia 4 desc"
+ U16_idea_5_3:0 "Bahari Interests"
+ U16_idea_5_3_desc:0 "Ourdia 5 desc"
+ U16_idea_6_3:0 "Korbarid Renaissance"
+ U16_idea_6_3_desc:0 "Ourdia 6 desc"
+ U16_idea_7_3:0 "Fire in the Darkness"
+ U16_idea_7_3_desc:0 "Ourdia 7 desc"
+
+ A59_ideas_2:0 "Corvuria Ideas 2"
+ A59_ideas_2_start:0 "Corvuria Traditions 2"
+ A59_ideas_2_bonus:0 "Corvuria Ambition 2"
+ A59_idea_1_2:0 "Servile Peasantry"
+ A59_idea_1_2_desc:0 "Corvuria 1 desc"
+ A59_idea_2_2:0 "Surrounded by Savages"
+ A59_idea_2_2_desc:0 "Corvuria 2 desc"
+ A59_idea_3_2:0 "Royal Shadows"
+ A59_idea_3_2_desc:0 "Corvuria 3 desc"
+ A59_idea_4_2:0 "Undoing the Folly"
+ A59_idea_4_2_desc:0 "Corvuria 4 desc"
+ A59_idea_5_2:0 "The Blood Court"
+ A59_idea_5_2_desc:0 "Corvuria 5 desc"
+ A59_idea_6_2:0 "Korbarid Renaissance"
+ A59_idea_6_2_desc:0 "Corvuria 6 desc"
+ A59_idea_7_2:0 "Crimson Leaders"
+ A59_idea_7_2_desc:0 "Corvuria 7 desc"
+
+ A59_ideas_3:0 "Corvuria Ideas 3"
+ A59_ideas_3_start:0 "Corvuria Traditions 3"
+ A59_ideas_3_bonus:0 "Corvuria Ambition 3"
+ A59_idea_1_3:0 "Servile Peasantry"
+ A59_idea_1_3_desc:0 "Corvuria 1 desc"
+ A59_idea_2_3:0 "Surrounded by Savages"
+ A59_idea_2_3_desc:0 "Corvuria 2 desc"
+ A59_idea_3_3:0 "Royal Shadows"
+ A59_idea_3_3_desc:0 "Corvuria 3 desc"
+ A59_idea_4_3:0 "Undoing the Folly"
+ A59_idea_4_3_desc:0 "Corvuria 4 desc"
+ A59_idea_5_3:0 "The Blood Court"
+ A59_idea_5_3_desc:0 "Corvuria 5 desc"
+ A59_idea_6_3:0 "Korbarid Renaissance"
+ A59_idea_6_3_desc:0 "Corvuria 6 desc"
+ A59_idea_7_3:0 "Crimson Leaders"
+ A59_idea_7_3_desc:0 "Corvuria 7 desc"
+
+ Z07_ideas_3:0 "Dostanor Ideas 3"
+ Z07_ideas_3_start:0 "Dostanor Traditions 3"
+ Z07_ideas_3_bonus:0 "Dostanor Ambition 3"
+ Z07_idea_1_3:0 "Freemen of Dostanor"
+ Z07_idea_1_3_desc:0 "Dostanor 1 desc"
+ Z07_idea_2_3:0 "Surrounded by Savages"
+ Z07_idea_2_3_desc:0 "Dostanor 2 desc"
+ Z07_idea_3_3:0 "Educated Elites"
+ Z07_idea_3_3_desc:0 "Dostanor 3 desc"
+ Z07_idea_4_3:0 "Undoing the Folly"
+ Z07_idea_4_3_desc:0 "Dostanor 4 desc"
+ Z07_idea_5_3:0 "Churn of Industry"
+ Z07_idea_5_3_desc:0 "Dostanor 5 desc"
+ Z07_idea_6_3:0 "Korbarid Renaissance"
+ Z07_idea_6_3_desc:0 "Dostanor 6 desc"
+ Z07_idea_7_3:0 "Plentiful Patriots"
+ Z07_idea_7_3_desc:0 "Dostanor 7 desc"
