--- a/localisation/CoT_i_nations_l_english.yml
+++ b/localisation/CoT_i_nations_l_english.yml
@@ -87,6 +87,8 @@
  W40_ADJ:0 "Monthavnr"
  W41:0 "Highhold"
  W41_ADJ:0 "Highholdic"
+ W42:0 "Livergrinder"
+ W42_ADJ:0 "Livergrinder"
  
  # Formable Decision Loc
 
