Elves and stuff

--- a/localisation/cot_nation_ideas_l_english.yml
+++ b/localisation/cot_nation_ideas_l_english.yml
@@ -7314,3 +7314,246 @@ B20_ideas_1:0 "Iron Scepter Ideas 1"
  Z07_idea_6_3_desc:0 "Dostanor 6 desc"
  Z07_idea_7_3:0 "Plentiful Patriots"
  Z07_idea_7_3_desc:0 "Dostanor 7 desc"
+
+
+ #### ELVEN ####
+
+ A31_ideas_2:0 "Moonhaven Ideas 2"
+ A31_ideas_2_start:0 "Moonhaven Traditions 2"
+ A31_ideas_2_bonus:0 "Moonhaven Ambition 2"
+ A31_idea_1_2:0 "Line of Munas"
+ A31_idea_1_2_desc:0 "Moonhaven 1 desc"
+ A31_idea_2_2:0 "Lives Stretching Centuries"
+ A31_idea_2_2_desc:0 "Moonhaven 2 desc"
+ A31_idea_3_2:0 "Silverhooved Steeds"
+ A31_idea_3_2_desc:0 "Moonhaven 3 desc"
+ A31_idea_4_2:0 "Lifetime of Learning"
+ A31_idea_4_2_desc:0 "Moonhaven 4 desc"
+ A31_idea_5_2:0 "Damerian Heroes"
+ A31_idea_5_2_desc:0 "Moonhaven 5 desc"
+ A31_idea_6_2:0 "Half-Kin"
+ A31_idea_6_2_desc:0 "Moonhaven 6 desc"
+ A31_idea_7_2:0 "Little Anbenncósts"
+ A31_idea_7_2_desc:0 "Moonhaven 7 desc"
+
+ A31_ideas_3:0 "Moonhaven Ideas 3"
+ A31_ideas_3_start:0 "Moonhaven Traditions 3"
+ A31_ideas_3_bonus:0 "Moonhaven Ambition 3"
+ A31_idea_1_3:0 "Line of Munas"
+ A31_idea_1_3_desc:0 "Moonhaven 1 desc"
+ A31_idea_2_3:0 "Lives Stretching Centuries"
+ A31_idea_2_3_desc:0 "Moonhaven 2 desc"
+ A31_idea_3_3:0 "Silverhooved Steeds"
+ A31_idea_3_3_desc:0 "Moonhaven 3 desc"
+ A31_idea_4_3:0 "Lifetime of Learning"
+ A31_idea_4_3_desc:0 "Moonhaven 4 desc"
+ A31_idea_5_3:0 "Damerian Heroes"
+ A31_idea_5_3_desc:0 "Moonhaven 5 desc"
+ A31_idea_6_3:0 "Half-Kin"
+ A31_idea_6_3_desc:0 "Moonhaven 6 desc"
+ A31_idea_7_3:0 "Little Anbenncósts"
+ A31_idea_7_3_desc:0 "Moonhaven 7 desc"
+
+
+ Z42_ideas_2:0 "Varivar Ideas 2"
+ Z42_ideas_2_start:0 "Varivar Traditions 2"
+ Z42_ideas_2_bonus:0 "Varivar Ambition 2"
+ Z42_idea_1_2:0 "Line of Munas"
+ Z42_idea_1_2_desc:0 "Varivar 1 desc"
+ Z42_idea_2_2:0 "Lives Stretching Centuries"
+ Z42_idea_2_2_desc:0 "Varivar 2 desc"
+ Z42_idea_3_2:0 "Elven Engineers"
+ Z42_idea_3_2_desc:0 "Varivar 3 desc"
+ Z42_idea_4_2:0 "Lifetime of Learning"
+ Z42_idea_4_2_desc:0 "Varivar 4 desc"
+ Z42_idea_5_2:0 "Damesear Elven Navy"
+ Z42_idea_5_2_desc:0 "Varivar 5 desc"
+ Z42_idea_6_2:0 "Half-Kin"
+ Z42_idea_6_2_desc:0 "Varivar 6 desc"
+ Z42_idea_7_2:0 "Little Anbenncósts"
+ Z42_idea_7_2_desc:0 "Varivar 7 desc"
+
+ Z42_ideas_3:0 "Varivar Ideas 3"
+ Z42_ideas_3_start:0 "Varivar Traditions 3"
+ Z42_ideas_3_bonus:0 "Varivar Ambition 3"
+ Z42_idea_1_3:0 "Line of Munas"
+ Z42_idea_1_3_desc:0 "Varivar 1 desc"
+ Z42_idea_2_3:0 "Lives Stretching Centuries"
+ Z42_idea_2_3_desc:0 "Varivar 2 desc"
+ Z42_idea_3_3:0 "Elven Engineers"
+ Z42_idea_3_3_desc:0 "Varivar 3 desc"
+ Z42_idea_4_3:0 "Lifetime of Learning"
+ Z42_idea_4_3_desc:0 "Varivar 4 desc"
+ Z42_idea_5_3:0 "Damesear Elven Navy"
+ Z42_idea_5_3_desc:0 "Varivar 5 desc"
+ Z42_idea_6_3:0 "Half-Kin"
+ Z42_idea_6_3_desc:0 "Varivar 6 desc"
+ Z42_idea_7_3:0 "Little Anbenncósts"
+ Z42_idea_7_3_desc:0 "Varivar 7 desc"
+
+
+ A32_ideas_2:0 "Ibevar Ideas 2"
+ A32_ideas_2_start:0 "Ibevar Traditions 2"
+ A32_ideas_2_bonus:0 "Ibevar Ambition 2"
+ A32_idea_1_2:0 "Future-Facing"
+ A32_idea_1_2_desc:0 "Ibevar 1 desc"
+ A32_idea_2_2:0 "Lives Stretching Centuries"
+ A32_idea_2_2_desc:0 "Ibevar 2 desc"
+ A32_idea_3_2:0 "Last True Elfrealm"
+ A32_idea_3_2_desc:0 "Ibevar 3 desc"
+ A32_idea_4_2:0 "Lifetime of Learning"
+ A32_idea_4_2_desc:0 "Ibevar 4 desc"
+ A32_idea_5_2:0 "Modern Techniques"
+ A32_idea_5_2_desc:0 "Ibevar 5 desc"
+ A32_idea_6_2:0 "Half-Kin"
+ A32_idea_6_2_desc:0 "Ibevar 6 desc"
+ A32_idea_7_2:0 "Forlorn Archictecture"
+ A32_idea_7_2_desc:0 "Ibevar 7 desc"
+
+ A32_ideas_3:0 "Ibevar Ideas 3"
+ A32_ideas_3_start:0 "Ibevar Traditions 3"
+ A32_ideas_3_bonus:0 "Ibevar Ambition 3"
+ A32_idea_1_3:0 "Future-Facing"
+ A32_idea_1_3_desc:0 "Ibevar 1 desc"
+ A32_idea_2_3:0 "Lives Stretching Centuries"
+ A32_idea_2_3_desc:0 "Ibevar 2 desc"
+ A32_idea_3_3:0 "Last True Elfrealm"
+ A32_idea_3_3_desc:0 "Ibevar 3 desc"
+ A32_idea_4_3:0 "Lifetime of Learning"
+ A32_idea_4_3_desc:0 "Ibevar 4 desc"
+ A32_idea_5_3:0 "Modern Techniques"
+ A32_idea_5_3_desc:0 "Ibevar 5 desc"
+ A32_idea_6_3:0 "Half-Kin"
+ A32_idea_6_3_desc:0 "Ibevar 6 desc"
+ A32_idea_7_3:0 "Forlorn Archictecture"
+ A32_idea_7_3_desc:0 "Ibevar 7 desc"
+
+
+ A83_ideas_2:0 "Silent Repose Ideas 2"
+ A83_ideas_2_start:0 "Silent Repose Traditions 2"
+ A83_ideas_2_bonus:0 "Silent Repose Ambition 2"
+ A83_idea_1_2:0 "Future-Facing"
+ A83_idea_1_2_desc:0 "Silent Repose 1 desc"
+ A83_idea_2_2:0 "Lives Stretching Centuries"
+ A83_idea_2_2_desc:0 "Silent Repose 2 desc"
+ A83_idea_3_2:0 "Last True Elfrealm"
+ A83_idea_3_2_desc:0 "Silent Repose 3 desc"
+ A83_idea_4_2:0 "Lifetime of Learning"
+ A83_idea_4_2_desc:0 "Silent Repose 4 desc"
+ A83_idea_5_2:0 "Modern Techniques"
+ A83_idea_5_2_desc:0 "Silent Repose 5 desc"
+ A83_idea_6_2:0 "Half-Kin"
+ A83_idea_6_2_desc:0 "Silent Repose 6 desc"
+ A83_idea_7_2:0 "Forlorn Archictecture"
+ A83_idea_7_2_desc:0 "Silent Repose 7 desc"
+
+ A83_ideas_3:0 "Silent Repose Ideas 3"
+ A83_ideas_3_start:0 "Silent Repose Traditions 3"
+ A83_ideas_3_bonus:0 "Silent Repose Ambition 3"
+ A83_idea_1_3:0 "Future-Facing"
+ A83_idea_1_3_desc:0 "Silent Repose 1 desc"
+ A83_idea_2_3:0 "Lives Stretching Centuries"
+ A83_idea_2_3_desc:0 "Silent Repose 2 desc"
+ A83_idea_3_3:0 "Last True Elfrealm"
+ A83_idea_3_3_desc:0 "Silent Repose 3 desc"
+ A83_idea_4_3:0 "Lifetime of Learning"
+ A83_idea_4_3_desc:0 "Silent Repose 4 desc"
+ A83_idea_5_3:0 "Modern Techniques"
+ A83_idea_5_3_desc:0 "Silent Repose 5 desc"
+ A83_idea_6_3:0 "Half-Kin"
+ A83_idea_6_3_desc:0 "Silent Repose 6 desc"
+ A83_idea_7_3:0 "Forlorn Archictecture"
+ A83_idea_7_3_desc:0 "Silent Repose 7 desc"
+
+
+ A21_ideas_2:0 "Venail Ideas 2"
+ A21_ideas_2_start:0 "Venail Traditions 2"
+ A21_ideas_2_bonus:0 "Venail Ambition 2"
+ A21_idea_1_2:0 "Firstsight, Last Sight of Cannor"
+ A21_idea_1_2_desc:0 "Venail 1 desc"
+ A21_idea_2_2:0 "Lives Stretching Centuries"
+ A21_idea_2_2_desc:0 "Venail 2 desc"
+ A21_idea_3_2:0 "Remnant Folk"
+ A21_idea_3_2_desc:0 "Venail 3 desc"
+ A21_idea_4_2:0 "Lifetime of Learning"
+ A21_idea_4_2_desc:0 "Venail 4 desc"
+ A21_idea_5_2:0 "Bright, Like Stars"
+ A21_idea_5_2_desc:0 "Venail 5 desc"
+ A21_idea_6_2:0 "Half-Kin"
+ A21_idea_6_2_desc:0 "Venail 6 desc"
+ A21_idea_7_2:0 "Modern Elven Army"
+ A21_idea_7_2_desc:0 "Venail 7 desc"
+
+ A21_ideas_3:0 "Venail Ideas 3"
+ A21_ideas_3_start:0 "Venail Traditions 3"
+ A21_ideas_3_bonus:0 "Venail Ambition 3"
+ A21_idea_1_3:0 "Firstsight, Last Sight of Cannor"
+ A21_idea_1_3_desc:0 "Venail 1 desc"
+ A21_idea_2_3:0 "Lives Stretching Centuries"
+ A21_idea_2_3_desc:0 "Venail 2 desc"
+ A21_idea_3_3:0 "Remnant Folk"
+ A21_idea_3_3_desc:0 "Venail 3 desc"
+ A21_idea_4_3:0 "Lifetime of Learning"
+ A21_idea_4_3_desc:0 "Venail 4 desc"
+ A21_idea_5_3:0 "Bright, Like Stars"
+ A21_idea_5_3_desc:0 "Venail 5 desc"
+ A21_idea_6_3:0 "Half-Kin"
+ A21_idea_6_3_desc:0 "Venail 6 desc"
+ A21_idea_7_3:0 "Modern Elven Army"
+ A21_idea_7_3_desc:0 "Venail 7 desc"
+
+
+ Z43_ideas_3:0 "Aelnar Ideas 3"
+ Z43_ideas_3_start:0 "Aelnar Traditions 3"
+ Z43_ideas_3_bonus:0 "Aelnar Ambition 3"
+ Z43_idea_1_3:0 "Reclaimers, Not Colonists"
+ Z43_idea_1_3_desc:0 "Aelnar 1 desc"
+ Z43_idea_2_3:0 "Lives Stretching Centuries"
+ Z43_idea_2_3_desc:0 "Aelnar 2 desc"
+ Z43_idea_3_3:0 "Separating Wheat From Chaff"
+ Z43_idea_3_3_desc:0 "Aelnar 3 desc"
+ Z43_idea_4_3:0 "Lifetime of Learning"
+ Z43_idea_4_3_desc:0 "Aelnar 4 desc"
+ Z43_idea_5_3:0 "Bright, Like Stars"
+ Z43_idea_5_3_desc:0 "Aelnar 5 desc"
+ Z43_idea_6_3:0 "Half-Kin"
+ Z43_idea_6_3_desc:0 "Aelnar 6 desc"
+ Z43_idea_7_3:0 "Modern Elven Army"
+ Z43_idea_7_3_desc:0 "Aelnar 7 desc"
+
+
+ Z22_ideas_2:0 "Celmaldor Ideas 2"
+ Z22_ideas_2_start:0 "Celmaldor Traditions 2"
+ Z22_ideas_2_bonus:0 "Celmaldor Ambition 2"
+ Z22_idea_1_2:0 "Merchant-Elves"
+ Z22_idea_1_2_desc:0 "Celmaldor 1 desc"
+ Z22_idea_2_2:0 "Lives Stretching Centuries"
+ Z22_idea_2_2_desc:0 "Celmaldor 2 desc"
+ Z22_idea_3_2:0 "Northern Trade"
+ Z22_idea_3_2_desc:0 "Celmaldor 3 desc"
+ Z22_idea_4_2:0 "Lifetime of Learning"
+ Z22_idea_4_2_desc:0 "Celmaldor 4 desc"
+ Z22_idea_5_2:0 "House Icewind"
+ Z22_idea_5_2_desc:0 "Celmaldor 5 desc"
+ Z22_idea_6_2:0 "Half-Kin"
+ Z22_idea_6_2_desc:0 "Celmaldor 6 desc"
+ Z22_idea_7_2:0 "Human Auxiliary Corps"
+ Z22_idea_7_2_desc:0 "Celmaldor 7 desc"
+
+ Z22_ideas_3:0 "Celmaldor Ideas 3"
+ Z22_ideas_3_start:0 "Celmaldor Traditions 3"
+ Z22_ideas_3_bonus:0 "Celmaldor Ambition 3"
+ Z22_idea_1_3:0 "Merchant-Elves"
+ Z22_idea_1_3_desc:0 "Celmaldor 1 desc"
+ Z22_idea_2_3:0 "Lives Stretching Centuries"
+ Z22_idea_2_3_desc:0 "Celmaldor 2 desc"
+ Z22_idea_3_3:0 "Northern Trade"
+ Z22_idea_3_3_desc:0 "Celmaldor 3 desc"
+ Z22_idea_4_3:0 "Lifetime of Learning"
+ Z22_idea_4_3_desc:0 "Celmaldor 4 desc"
+ Z22_idea_5_3:0 "House Icewind"
+ Z22_idea_5_3_desc:0 "Celmaldor 5 desc"
+ Z22_idea_6_3:0 "Half-Kin"
+ Z22_idea_6_3_desc:0 "Celmaldor 6 desc"
+ Z22_idea_7_3:0 "Human Auxiliary Corps"
+ Z22_idea_7_3_desc:0 "Celmaldor 7 desc"
