--- a/localisation/CoT_i_Events_l_english.yml
+++ b/localisation/CoT_i_Events_l_english.yml
@@ -36,6 +36,10 @@
  CoT_ideagroups.6.a:0 "Adopt Rimmeric Culture"
  CoT_ideagroups.6.b:0 "Stay Esmari"
 
+ cot_ideas_upgrade.7.t:0 "Birth of an Empire"
+ cot_ideas_upgrade.7.d:0 "TODO"
+ CoT_ideagroups.7.a:0 "All will bow"
+
  improved_marines:0 "Improved Marines"
  cot_vassal_econimic:0 "Economy Focus"
  cot_vassal_military:0 "Military Focus"
