Auto stash before merge of "Cannorwake" and "origin/Cannorwake"

--- a/localisation/cot_nation_ideas_l_english.yml
+++ b/localisation/cot_nation_ideas_l_english.yml
@@ -1,4 +1,4 @@
-﻿l_english:
+l_english:
  
  ##### LENCENOR #####
  
@@ -7314,6 +7314,218 @@ B20_ideas_1:0 "Iron Scepter Ideas 1"
  Z07_idea_6_3_desc:0 "Dostanor 6 desc"
  Z07_idea_7_3:0 "Plentiful Patriots"
  Z07_idea_7_3_desc:0 "Dostanor 7 desc"
+
+ #WELF AMB&TRAD
+ #Ayeth
+ I33_ideas_1:0 "Sallámru Ideas 1"
+ I33_ideas_1_start:0 "Sallámru Traditions 1"
+ I33_ideas_1_bonus:0 "Sallámru Ambition 1"
+ I33_ideas_2:0 "Sallámru Ideas 2"
+ I33_ideas_2_start:0 "Sallámru Traditions 2"
+ I33_ideas_2_bonus:0 "Sallámru Ambition 2"
+ I33_ideas_3:0 "Sallámru Ideas 3"
+ I33_ideas_3_start:0 "Sallámru Traditions 3"
+ I33_ideas_3_bonus:0 "Sallámru Ambition 3"
+ #Cenag
+ I29_ideas_1:0 "Sallámru Ideas 1"
+ I29_ideas_1_start:0 "Sallámru Traditions 1"
+ I29_ideas_1_bonus:0 "Sallámru Ambition 1"
+ I29_ideas_2:0 "Sallámru Ideas 2"
+ I29_ideas_2_start:0 "Sallámru Traditions 2"
+ I29_ideas_2_bonus:0 "Sallámru Ambition 2"
+ I29_ideas_3:0 "Sallámru Ideas 3"
+ I29_ideas_3_start:0 "Sallámru Traditions 3"
+ I29_ideas_3_bonus:0 "Sallámru Ambition 3"
+ #Elyn
+ I26_ideas_1:0 "Sallámru Ideas 1"
+ I26_ideas_1_start:0 "Sallámru Traditions 1"
+ I26_ideas_1_bonus:0 "Sallámru Ambition 1"
+ I26_ideas_2:0 "Sallámru Ideas 2"
+ I26_ideas_2_start:0 "Sallámru Traditions 2"
+ I26_ideas_2_bonus:0 "Sallámru Ambition 2"
+ I26_ideas_3:0 "Sallámru Ideas 3"
+ I26_ideas_3_start:0 "Sallámru Traditions 3"
+ I26_ideas_3_bonus:0 "Sallámru Ambition 3"
+ #Myna
+ I27_ideas_1:0 "Sallámru Ideas 1"
+ I27_ideas_1_start:0 "Sallámru Traditions 1"
+ I27_ideas_1_bonus:0 "Sallámru Ambition 1"
+ I27_ideas_2:0 "Sallámru Ideas 2"
+ I27_ideas_2_start:0 "Sallámru Traditions 2"
+ I27_ideas_2_bonus:0 "Sallámru Ambition 2"
+ I27_ideas_3:0 "Sallámru Ideas 3"
+ I27_ideas_3_start:0 "Sallámru Traditions 3"
+ I27_ideas_3_bonus:0 "Sallámru Ambition 3"
+ #Drennen
+ I28_ideas_1:0 "Sallámru Ideas 1"
+ I28_ideas_1_start:0 "Sallámru Traditions 1"
+ I28_ideas_1_bonus:0 "Sallámru Ambition 1"
+ I28_ideas_2:0 "Sallámru Ideas 2"
+ I28_ideas_2_start:0 "Sallámru Traditions 2"
+ I28_ideas_2_bonus:0 "Sallámru Ambition 2"
+ I28_ideas_3:0 "Sallámru Ideas 3"
+ I28_ideas_3_start:0 "Sallámru Traditions 3"
+ I28_ideas_3_bonus:0 "Sallámru Ambition 3"
+ #Fealgarn
+ I30_ideas_1:0 "Sallámru Ideas 1"
+ I30_ideas_1_start:0 "Sallámru Traditions 1"
+ I30_ideas_1_bonus:0 "Sallámru Ambition 1"
+ I30_ideas_2:0 "Sallámru Ideas 2"
+ I30_ideas_2_start:0 "Sallámru Traditions 2"
+ I30_ideas_2_bonus:0 "Sallámru Ambition 2"
+ I30_ideas_3:0 "Sallámru Ideas 3"
+ I30_ideas_3_start:0 "Sallámru Traditions 3"
+ I30_ideas_3_bonus:0 "Sallámru Ambition 3"
+ #Ahain
+ I32_ideas_1:0 "Sallámru Ideas 1"
+ I32_ideas_1_start:0 "Sallámru Traditions 1"
+ I32_ideas_1_bonus:0 "Sallámru Ambition 1"
+ I32_ideas_2:0 "Sallámru Ideas 2"
+ I32_ideas_2_start:0 "Sallámru Traditions 2"
+ I32_ideas_2_bonus:0 "Sallámru Ambition 2"
+ I32_ideas_3:0 "Sallámru Ideas 3"
+ I32_ideas_3_start:0 "Sallámru Traditions 3"
+ I32_ideas_3_bonus:0 "Sallámru Ambition 3"
+ #Ghula
+ I34_ideas_1:0 "Sallámru Ideas 1"
+ I34_ideas_1_start:0 "Sallámru Traditions 1"
+ I34_ideas_1_bonus:0 "Sallámru Ambition 1"
+ I34_ideas_2:0 "Sallámru Ideas 2"
+ I34_ideas_2_start:0 "Sallámru Traditions 2"
+ I34_ideas_2_bonus:0 "Sallámru Ambition 2"
+ I34_ideas_3:0 "Sallámru Ideas 3"
+ I34_ideas_3_start:0 "Sallámru Traditions 3"
+ I34_ideas_3_bonus:0 "Sallámru Ambition 3"
+ #Cyranvar
+ I45_ideas_1:0 "Sallámru Ideas 1"
+ I45_ideas_1_start:0 "Sallámru Traditions 1"
+ I45_ideas_1_bonus:0 "Sallámru Ambition 1"
+ I45_ideas_2:0 "Sallámru Ideas 2"
+ I45_ideas_2_start:0 "Sallámru Traditions 2"
+ I45_ideas_2_bonus:0 "Sallámru Ambition 2"
+ I45_ideas_3:0 "Sallámru Ideas 3"
+ I45_ideas_3_start:0 "Sallámru Traditions 3"
+ I45_ideas_3_bonus:0 "Sallámru Ambition 3"
+ #Scótha
+ I31_ideas_1:0 "Sallámru Ideas 1"
+ I31_ideas_1_start:0 "Sallámru Traditions 1"
+ I31_ideas_1_bonus:0 "Sallámru Ambition 1"
+ I31_ideas_2:0 "Sallámru Ideas 2"
+ I31_ideas_2_start:0 "Sallámru Traditions 2"
+ I31_ideas_2_bonus:0 "Sallámru Ambition 2"
+ I31_ideas_3:0 "Sallámru Ideas 3"
+ I31_ideas_3_start:0 "Sallámru Traditions 3"
+ I31_ideas_3_bonus:0 "Sallámru Ambition 3"
+
+ #WELF SHARED 
+ I33_idea_2_1:0 "Lives Stretching Centuries"
+ I33_idea_2_1_desc:0 "Elven Cultural 2 Desc"
+ I33_idea_3_1:0 "Ranger Act"
+ I33_idea_3_1_desc:0 "Wood Elf 3 Desc"
+ I33_idea_4_1:0 "Lifetime of Learning"
+ I33_idea_4_1_desc:0 "Elven Cultural 4 Desc"
+ I33_idea_5_1:0 "Unveiled"
+ I33_idea_5_1_desc:0 "Wood Elf 5 Desc"
+ I33_idea_6_1:0 "Half-Kin"
+ I33_idea_6_1_desc:0 "Elven Cultural 6 Desc"
+ I33_idea_7_1:0 "Fey Concord"
+ I33_idea_7_1_desc:0 "Wood Elf 7 Desc"
+ I33_idea_2_2:0 "Lives Stretching Centuries"
+ I33_idea_2_2_desc:0 "Elven Cultural 2 Desc"
+ I33_idea_3_2:0 "Ranger Act"
+ I33_idea_3_2_desc:0 "Wood Elf 3 Desc"
+ I33_idea_4_2:0 "Lifetime of Learning"
+ I33_idea_4_2_desc:0 "Elven Cultural 4 Desc"
+ I33_idea_5_2:0 "Unveiled"
+ I33_idea_5_2_desc:0 "Wood Elf 5 Desc"
+ I33_idea_6_2:0 "Half-Kin"
+ I33_idea_6_2_desc:0 "Elven Cultural 6 Desc"
+ I33_idea_7_2:0 "Fey Concord"
+ I33_idea_7_2_desc:0 "Wood Elf 7 Desc"
+ I33_idea_2_3:0 "Lives Stretching Centuries"
+ I33_idea_2_3_desc:0 "Elven Cultural 2 Desc"
+ I33_idea_3_3:0 "Ranger Act"
+ I33_idea_3_3_desc:0 "Wood Elf 3 Desc"
+ I33_idea_4_3:0 "Lifetime of Learning"
+ I33_idea_4_3_desc:0 "Elven Cultural 4 Desc"
+ I33_idea_5_3:0 "Unveiled"
+ I33_idea_5_3_desc:0 "Wood Elf 5 Desc"
+ I33_idea_6_3:0 "Half-Kin"
+ I33_idea_6_3_desc:0 "Elven Cultural 6 Desc"
+ I33_idea_7_3:0 "Fey Concord"
+ I33_idea_7_3_desc:0 "Wood Elf 7 Desc"
+
+ #WELF UNIQUE IDEAS
+ #Ayeth
+ I33_idea_1_1:0 "The Arrow-maker Clan"
+ I33_idea_1_1_desc:0 "Wood Elf 1 Desc"
+ I33_idea_1_2:0 "The Arrow-maker Clan"
+ I33_idea_1_2_desc:0 "Wood Elf 1 Desc"
+ I33_idea_1_3:0 "The Arrow-maker Clan"
+ I33_idea_1_3_desc:0 "Wood Elf 1 Desc"
+ #Cenag
+ I29_idea_1_1:0 "The Iron-willed Clan"
+ I29_idea_1_1_desc:0 "Wood Elf 1 Desc"
+ I29_idea_1_2:0 "The Iron-willed Clan"
+ I29_idea_1_2_desc:0 "Wood Elf 1 Desc"
+ I29_idea_1_3:0 "The Iron-willed Clan"
+ I29_idea_1_3_desc:0 "Wood Elf 1 Desc"
+ #Elyn
+ I26_idea_1_1:0 "The Metropolitan Clan"
+ I26_idea_1_1_desc:0 "Wood Elf 1 Desc"
+ I26_idea_1_2:0 "The Metropolitan Clan"
+ I26_idea_1_2_desc:0 "Wood Elf 1 Desc"
+ I26_idea_1_3:0 "The Metropolitan Clan"
+ I26_idea_1_3_desc:0 "Wood Elf 1 Desc"
+ #Myna
+ I27_idea_1_1:0 "The Resilient Clan"
+ I27_idea_1_1_desc:0 "Wood Elf 1 Desc"
+ I27_idea_1_2:0 "The Resilient Clan"
+ I27_idea_1_2_desc:0 "Wood Elf 1 Desc"
+ I27_idea_1_3:0 "The Resilient Clan"
+ I27_idea_1_3_desc:0 "Wood Elf 1 Desc"
+ #Drennen
+ I28_idea_1_1:0 "The Verdant Clan"
+ I28_idea_1_1_desc:0 "Wood Elf 1 Desc"
+ I28_idea_1_2:0 "The Verdant Clan"
+ I28_idea_1_2_desc:0 "Wood Elf 1 Desc"
+ I28_idea_1_3:0 "The Verdant Clan"
+ I28_idea_1_3_desc:0 "Wood Elf 1 Desc"
+ #Fealgarn
+ I30_idea_1_1:0 "The Elk-rider Clan"
+ I30_idea_1_1_desc:0 "Wood Elf 1 Desc"
+ I30_idea_1_2:0 "The Elk-rider Clan"
+ I30_idea_1_2_desc:0 "Wood Elf 1 Desc"
+ I30_idea_1_3:0 "The Elk-rider Clan"
+ I30_idea_1_3_desc:0 "Wood Elf 1 Desc"
+ #Scótha
+ I31_idea_1_1:0 "The Alchemist Clan"
+ I31_idea_1_1_desc:0 "Wood Elf 1 Desc"
+ I31_idea_1_2:0 "The Alchemist Clan"
+ I31_idea_1_2_desc:0 "Wood Elf 1 Desc"
+ I31_idea_1_3:0 "The Alchemist Clan"
+ I31_idea_1_3_desc:0 "Wood Elf 1 Desc"
+ #Ahain
+ I32_idea_1_1:0 "The River Clan"
+ I32_idea_1_1_desc:0 "Wood Elf 1 Desc"
+ I32_idea_1_2:0 "The River Clan"
+ I32_idea_1_2_desc:0 "Wood Elf 1 Desc"
+ I32_idea_1_3:0 "The River Clan"
+ I32_idea_1_3_desc:0 "Wood Elf 1 Desc"
+ #Ghula
+ I34_idea_1_1:0 "The Shadow Clan"
+ I34_idea_1_1_desc:0 "Wood Elf 1 Desc"
+ I34_idea_1_2:0 "The Shadow Clan"
+ I34_idea_1_2_desc:0 "Wood Elf 1 Desc"
+ I34_idea_1_3:0 "The Shadow Clan"
+ I34_idea_1_3_desc:0 "Wood Elf 1 Desc"
+ #Cyranvar
+ I45_idea_1_1:0 "The United Clan"
+ I45_idea_1_1_desc:0 "Wood Elf 1 Desc"
+ I45_idea_1_2:0 "The United Clan"
+ I45_idea_1_2_desc:0 "Wood Elf 1 Desc"
+ I45_idea_1_3:0 "The United Clan"
+ I45_idea_1_3_desc:0 "Wood Elf 1 Desc"
 
 
  #### ELVEN ####
