--- a/localisation/cot_nation_ideas_l_english.yml
+++ b/localisation/cot_nation_ideas_l_english.yml
@@ -1,4 +1,4 @@
-l_english:
+﻿l_english:
  
  ##### LENCENOR #####
  
@@ -7417,7 +7417,7 @@ B20_ideas_1:0 "Iron Scepter Ideas 1"
  I31_ideas_3_start:0 "Sallámru Traditions 3"
  I31_ideas_3_bonus:0 "Sallámru Ambition 3"
 
- #WELF SHARED 
+ #WELF SHAREDD
  I33_idea_2_1:0 "Lives Stretching Centuries"
  I33_idea_2_1_desc:0 "Elven Cultural 2 Desc"
  I33_idea_3_1:0 "Ranger Act"
