--- a/localisation/CoT_i_nations_l_english.yml
+++ b/localisation/CoT_i_nations_l_english.yml
@@ -124,3 +124,8 @@
  DAMECOST_STRING_ADJ:0 "Damecóster"
  REV_DAMECOST_STRING:0 "Revolutionary Damecóst"
  REV_DAMECOST_STRING_ADJ:0 "Damecóster"
+
+ GHULLE_STRING:0 "Ghúlle"
+ GHULLE_STRING_ADJ:0 "Ghúllen"
+ REV_GHULLE_STRING:0 "Revolutionary Ghúlle"
+ REV_GHULLE_STRING_ADJ:0 "Ghúllen"
