erratic court part 2

--- a/localisation/CoT_i_nations_l_english.yml
+++ b/localisation/CoT_i_nations_l_english.yml
@@ -87,8 +87,8 @@
  W40_ADJ:0 "Monthavnr"
  W41:0 "Highhold"
  W41_ADJ:0 "Highholdic"
- W42:0 "Livergrinder"
- W42_ADJ:0 "Livergrinder"
+ W42:0 "Meradzor"
+ W42_ADJ:0 "Meradzor"
  
  # Formable Decision Loc
 
