--- a/localisation/Flavour_Orenvalyam_U39_l_english.yml
+++ b/localisation/Flavour_Orenvalyam_U39_l_english.yml
@@ -24,6 +24,7 @@
  #Tooltips
  unlock_merc_the_silverspite_company_tt: "Unlock the mercenary company §MThe Silverspite Company§! to recruit."
  merc_the_silverspite_company: "§MThe Silverspite Company§!"
+ merc_dookansguard: "§MDookan's Guard§!"
  orenvalyam_starting_bonus_tt: "Gain 20 §YInfantry§!, 5 §YArtillery§!, 20k §YManpower§!, and 300 §YGold§! for every 15 §YOren Nayiru§! provinces in Taychend"
  orenvalyam_vassalize_oren_nayiru_tt: "Vassalize all Oren Nayiru Countries in Taychend\n"
  orenvalyam_control_provinces_tt: "Gain control of 25% of Oren Nayiru Provinces in Taychend\n"
