--- a/localisation/cot_nation_ideas_l_english.yml
+++ b/localisation/cot_nation_ideas_l_english.yml
@@ -1,6 +1,6 @@
-l_english:
+﻿l_english:
  
- ##### LENCENOR #####
+ #### LENCENOR ####
  
  A01_ideas_3:0 "Lorentish Ideas 3"
  A01_ideas_3_start:0 "Lorentish Traditions 3"
