--- a/localisation/CoT_misc_l_english.yml
+++ b/localisation/CoT_misc_l_english.yml
@@ -89,3 +89,6 @@
 
  bump_vassal_ideas_title:0 "Bump ideas of your vassals"
  petition_overlord_for_ideas_bump_title:0 "Bump ideas thanks to Tier 3 liege"
+
+
+ B29_weakest_link:0 "Weakest link"
