--- a/localisation/anb_cultures_l_english.yml
+++ b/localisation/anb_cultures_l_english.yml
@@ -76,6 +76,7 @@
  corintari:0 "Corintari"
  white_reachman:0 "White Reachman"
  moredhalic:0 "Moredhalic"
+ rugani:0 "Rugani"
  black_demesner:0 "Black Demesner"
  lencori:0 "Lencori"
  high_lorentish:0 "High Lorentish"
