Greentide modifiers and such

--- a/localisation/CoT_misc_l_english.yml
+++ b/localisation/CoT_misc_l_english.yml
@@ -92,3 +92,23 @@
 
 
  B29_weakest_link:0 "Weakest link"
+
+  greentide_cohesion:0 "Greentide Cohesion"
+
+  greentide_statecraft_ae:0 "Greentide statecraft: Expansion Focus"
+
+  greentide_statecraft_production:0 "Greentide statecraft: Production Focus"
+
+  greentide_statecraft_build:0 "Greentide Statecraft: Construction Focus"
+
+  greentide_finesse_dip:0 "Greentide Finesse: Diplomatic Focus"
+
+  greentide_finesse_trade:0 "Greentide Finesse: Trade Focus"
+
+  greentide_finesse_naval:0 "Greentide Finesse: Naval Focus"
+
+  greentide_power_inf:0 "Greentide Power: Infantry Focus"
+
+  greentide_power_regiment:0 "Greentide Power: Logistic Focus"
+
+  greentide_power_siege:0 "Greentide Power: Siege Focus"
