Basic CoT ass points calculator

--- a/localisation/CoT_misc_l_english.yml
+++ b/localisation/CoT_misc_l_english.yml
@@ -90,6 +90,11 @@
  bump_vassal_ideas_title:0 "Bump ideas of your vassals"
  petition_overlord_for_ideas_bump_title:0 "Bump ideas thanks to Tier 3 liege"
 
+ cot_minor_power_info_decision_title:0 "MINOR POWER: You cost 2 ass points to ally"
+ cot_middle_power_info_decision_title:0 "MIDDLE POWER: You cost 4 ass points to ally"
+ cot_waning_power_info_decision_title:0 "WANING POWER: You cost 6 ass points to ally"
+ cot_great_power_info_decision_title:0 "GREAT POWER: You cost 8 ass points to ally"
+
 
  B29_weakest_link:0 "Weakest link"
 
