Mostly Vaass, but also Malacnar

--- a/localisation/CoT_misc_l_english.yml
+++ b/localisation/CoT_misc_l_english.yml
@@ -117,3 +117,8 @@
   greentide_power_regiment:0 "Greentide Power: Logistic Focus"
 
   greentide_power_siege:0 "Greentide Power: Siege Focus"
+
+  cot_camir_new_girl_title:0 "Restore Queen Consort"
+  cot_camir_new_girl_desc:0 "Restore Queen Consort"
+  cot_camir_title:0 "Restore Camir's name"
+  cot_camir_desc:0 "Restore Camir's name"
