--- a/localisation/CoT_i_Events_l_english.yml
+++ b/localisation/CoT_i_Events_l_english.yml
@@ -129,3 +129,8 @@
  cot_misc_events.10.d:0 "At the most recent parliament, it was loudly and unnervingly suggested that the ancient idea of a single Anbennarian state was revived. Only time will tell what this means for the Empire and Cannor."
  cot_misc_events.10.a:0 "What does this portend for Imperial lands?"
  cot_misc_events.10.b:0 "Anbennar exists in unity!"
+
+ #Alltide Week 2 - 3
+ s77_averted_hunger_crisis:0 "Averted Hunger Crisis"
+ g90_tearfallfest:0 "Tränefallenfest"
+ w25_cannon_diplomacy:0 "Cannon Diplomacy"
