--- a/localisation/CoT_i_Events_l_english.yml
+++ b/localisation/CoT_i_Events_l_english.yml
@@ -134,3 +134,7 @@
  s77_averted_hunger_crisis:0 "Averted Hunger Crisis"
  g90_tearfallfest:0 "Tränefallenfest"
  w25_cannon_diplomacy:0 "Cannon Diplomacy"
+ cot_h87_strong:0 "Strong King"
+ cot_F71_amsisi_peace:0 "Amsisi Peace"
+ cot_f71_vowp:0 "Avowed Peace"
+ cot_f71_vowf:0 "Vow Fulfilled"
