--- a/localisation/CoT_i_Events_l_english.yml
+++ b/localisation/CoT_i_Events_l_english.yml
@@ -29,7 +29,7 @@
 
  cot_ideas_upgrade.5.t:0 "More than just the city"
  cot_ideas_upgrade.5.d:0 "TODO"
- CoT_ideagroups.5.a:0 "Not just Anbennc√≥st"
+ CoT_ideagroups.5.a:0 "Not just AnbenncÛst"
 
  cot_ideas_upgrade.6.t:0 "Future of Havoral"
  cot_ideas_upgrade.6.d:0 "TODO"
@@ -132,9 +132,11 @@
 
  #Alltide Week 2 - 3
  s77_averted_hunger_crisis:0 "Averted Hunger Crisis"
- g90_tearfallfest:0 "Tr√§nefallenfest"
+ g90_tearfallfest:0 "Tr‰nefallenfest"
  w25_cannon_diplomacy:0 "Cannon Diplomacy"
  cot_h87_strong:0 "Strong King"
  cot_F71_amsisi_peace:0 "Amsisi Peace"
  cot_f71_vowp:0 "Avowed Peace"
  cot_f71_vowf:0 "Vow Fulfilled"
+ cot_F25_broth:0 "Brotherhoods"
+ cot_F25_centr:0 "Centralization"
