Malacnar event + khet fix

--- a/localisation/CoT_i_Events_l_english.yml
+++ b/localisation/CoT_i_Events_l_english.yml
@@ -141,3 +141,7 @@
  cot_F25_broth:0 "Brotherhoods"
  wos_H33_democratic_values:0 "Democratic Values"
  wos_H33_aldreds_reign:0 "Aldred's Reign"
+ cot_F78_vamp:0 "Vampires"
+ cot_F78_vamp_desc:0 "Cope More Badook - Love Zael"
+ cot_g32_ecolands:0 "Economic Heartlands"
+ cot_g32_millands:0 "Military Heartlands"
