--- a/localisation/CoT_i_Events_l_english.yml
+++ b/localisation/CoT_i_Events_l_english.yml
@@ -145,3 +145,4 @@
  cot_F78_vamp_desc:0 "Cope More Badook - Love Zael"
  cot_g32_ecolands:0 "Economic Heartlands"
  cot_g32_millands:0 "Military Heartlands"
+ cot_L29_prosp:0 "Flourishing Nation"
