--- a/localisation/CoT_i_Events_l_english.yml
+++ b/localisation/CoT_i_Events_l_english.yml
@@ -146,3 +146,6 @@
  cot_g32_ecolands:0 "Economic Heartlands"
  cot_g32_millands:0 "Military Heartlands"
  cot_L29_prosp:0 "Flourishing Nation"
+ cot_A09_part:0 "Sorncosti Particularism"
+ cot_A09_paper:0 "Nationalist Slop Factory"
+ 
