--- a/localisation/CoT_i_Events_l_english.yml
+++ b/localisation/CoT_i_Events_l_english.yml
@@ -148,4 +148,4 @@
  cot_L29_prosp:0 "Flourishing Nation"
  cot_A09_part:0 "Sorncosti Particularism"
  cot_A09_paper:0 "Nationalist Slop Factory"
- 
+ cot_L37_shock:0 "New Artifacts"
