--- a/localisation/CoT_i_Events_l_english.yml
+++ b/localisation/CoT_i_Events_l_english.yml
@@ -149,3 +149,5 @@
  cot_A09_part:0 "Sorncosti Particularism"
  cot_A09_paper:0 "Nationalist Slop Factory"
  cot_L37_shock:0 "New Artifacts"
+ cot_A57_farrani:0 "Farrani Autonomous Zone"
+ 
