--- a/localisation/CoT_i_Events_l_english.yml
+++ b/localisation/CoT_i_Events_l_english.yml
@@ -29,7 +29,7 @@
 
  cot_ideas_upgrade.5.t:0 "More than just the city"
  cot_ideas_upgrade.5.d:0 "TODO"
- CoT_ideagroups.5.a:0 "Not just Anbenncóst"
+ CoT_ideagroups.5.a:0 "Not just Anbenncï¿½st"
 
  cot_ideas_upgrade.6.t:0 "Future of Havoral"
  cot_ideas_upgrade.6.d:0 "TODO"
@@ -132,7 +132,7 @@
 
  #Alltide Week 2 - 3
  s77_averted_hunger_crisis:0 "Averted Hunger Crisis"
- g90_tearfallfest:0 "Tránefallenfest"
+ g90_tearfallfest:0 "Trï¿½nefallenfest"
  w25_cannon_diplomacy:0 "Cannon Diplomacy"
  cot_h87_strong:0 "Strong King"
  cot_F71_amsisi_peace:0 "Amsisi Peace"
@@ -148,4 +148,5 @@
  cot_L29_prosp:0 "Flourishing Nation"
  cot_A09_part:0 "Sorncosti Particularism"
  cot_A09_paper:0 "Nationalist Slop Factory"
- 
+ wos_A29_naras_tithe:0 "Colonial Protection Tithe"
+ wos_A29_naras_tithe_colony "will anyone even read this?"
