--- a/localisation/CoT_i_Events_l_english.yml
+++ b/localisation/CoT_i_Events_l_english.yml
@@ -150,4 +150,11 @@
  cot_A09_paper:0 "Nationalist Slop Factory"
  cot_L37_shock:0 "New Artifacts"
  cot_A57_farrani:0 "Farrani Autonomous Zone"
+ cot_a25_bankd:0 "Crownbank - Damescrown"
+ cot_a25_bankg:0 "Crownbank - Gawed"
+ cot_a25_heart:0 "Arca Araqath"
+ cot_a25_wall:0 "Arca Aistmur"
+ cot_a25_valour:0 "Arca Valtre"
+ cot_a25_telgeir:0 "Arca Telgeir"
+ cot_a25_logistics:0 "Joint Base Aaramar Derwick Logistical Hub"
  
